--- a/src/app/components/groups/groups.component.scss
+++ b/src/app/components/groups/groups.component.scss
@@ -1,13 +1,16 @@
-::ng-deep{
-    // .cdk-overlay-connected-position-bounding-box {
-    //     top: auto !important;
-    //     right: 65px !important;
-    //     width: 165px !important;
-    //     left: auto !important;
-    //     bottom: -3px !important;
-    // }
+::ng-deep .custom-cdk-overlay-container{
+    .cdk-overlay-connected-position-bounding-box {
+        top: auto !important;
+        right: auto !important;
+        width: 165px !important;
+        left: 600px !important;
+        bottom: -3px !important;
+    }
     .mat-mdc-menu-panel {
         background-color: #20272d !important;
         box-shadow: 5px 5px 5px 0px #0000001a !important;
+    }
+    .mat-mdc-menu-content{
+        overflow: hidden !important;;
     }
 }
