--- a/src/app/common/groups-list/groups-list.component.html
+++ b/src/app/common/groups-list/groups-list.component.html
@@ -11,33 +11,33 @@
                 </span>
             } -->
           <div (click)="toggle(group)" class="py-[10px] cursor-pointer flex border-y border-y-solid border-y-custom-border font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
-            <div class="min-w-[46%] flex gap-[15px]">
+            <div class="min-w-[355px] flex gap-[15px]" [ngStyle]="{ 'padding-left': padding }">
                 <img [src]="activeIndex?.id == group?.id ? 'assets/svg-icons/folder-icon-expanded.svg':'assets/svg-icons/folder-icon.svg'" alt="" />
                 <span >{{group.name}}</span>
             </div>
-            <span class="min-w-[15%]"></span>
-            <span class="min-w-[17%]">{{group.created_at | dateFormat}}</span>
-            <span class="min-w-[15%]">{{group.surface_area.toFixed(3)}}km²</span>
+            <span class="min-w-[102.324px]"></span>
+            <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span>
+            <span class="min-w-[127.933px]">{{group.surface_area.toFixed(3)}}km²</span>
             <div class="flex gap-[15px] items-center">
                 <span class="text-secondary-heiglight">{{group.total_objects}}</span>
-                <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
+                <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setClass()" [matMenuTriggerFor]="menu">
                     <img src="assets/svg-icons/nav-menu-icon.svg" />
                 </span>
                 <mat-menu class="bg-secondaryBg" #menu="matMenu" id="site">
                     <div class="inline-flex p-[15px] font-Barlow flex-col items-start gap-[15px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Notifications</span>
                         <div class="rounded-[25px] bg-primaryBg flex items-center justify-between">
-                            <button 
+                            <button (click)="setNotifications(true,group)"
                                 class="text-xs leading-[18px] py-[9px] font-semibold my-[7px] mr-[10px] ml-[7px] rounded-[19px] px-[20px]"
                                 [ngClass]="group?.notification ?'text-[#453303] bg-yellow':'text-secondary-heiglight'">On
                                </button>
-                            <button 
+                            <button (click)="setNotifications(false,group)"
                                 class="text-xs leading-[18px] py-[9px] font-semibold my-[7px] mr-[7px] rounded-[19px] px-[20px] "
                                 [ngClass]="!group?.notification?'text-[#453303] bg-yellow':'text-secondary-heiglight'">Off</button>
                         </div>
-                        <span *ngIf="group.subgroups.length" class="text-yellow text-xs font-bold leading-[18px] cursor-pointer">Add subgroup</span>
-                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer">Rename</span>
-                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer">Delete</span>
+                        <span *ngIf="group.subgroups.length" class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="addGroup('addSubgroup',group)">Add subgroup</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="renameGroup('rename',group)">Rename</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="deleteGroup('delete',group)">Delete</span>
                     </div>
                 </mat-menu>
             </div>
@@ -47,8 +47,8 @@
         <!-- Subgroups -->
         @if (activeIndex?.id == group?.id){<div class="" >
             @for (subgroup of group.subgroups; track subgroup;let i = $index) {
-            <div class="ml-[30px] overflow-hidden transition-all duration-300 ease-in-out">
-            <app-groups-list [group]="subgroup" [index]="i" [type]="'Groups'" ></app-groups-list>
+            <div class="overflow-hidden transition-all duration-300 ease-in-out">
+            <app-groups-list [group]="subgroup" [index]="i" [type]="'Groups'" [padding]="'30px'"></app-groups-list>
             </div>
              }
         </div>
