--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 <mat-drawer-container id="menu-drawer" class="example-container" autosize>
   <div 
-    class="h-screen min-h-[700px] relative"
+    class="h-screen min-h-[700px] cursor-default relative"
     [ngClass]="isGoogleLayerActive === 'OpenStreetMapDark' ||  isGoogleLayerActive === 'GoogleStreetMapDark' ? '!bg-[#234436]' : ' z-30'"
   >
     <div
-      class=""
+      class="cursor-default"
       [ngClass]="isGoogleLayerActive === 'OpenStreetMapDark' ||  isGoogleLayerActive === 'GoogleStreetMapDark' ? 'bg-[#131f07]  z-30 h-full' : ' z-30 h-full'"
     >
       <div id="header" class="fixed top-0 z-30" (click)="closeDropdown()">
@@ -17,7 +17,7 @@
           
         ></app-header>
       </div>
-      <div class="relative">
+      <div class="relative cursor-default">
         <mat-drawer [ngClass]="OpenEventCalendar ? '!w-[1088px]':'!w-[820px]'"  #drawer class="!bg-primaryBg !top-[40px] !block !z-[999999999999] library" mode="side">
          @if (drawer._animationState === 'open') {
           <div class="z-[999999999999] h-full">
