--- a/src/app/components/sites/sites.component.html
+++ b/src/app/components/sites/sites.component.html
@@ -39,7 +39,7 @@
                         <img src="assets/svg-icons/nav-menu-icon.svg" />
                     </span> -->
                     <div class="w-[16px] h-[16px] flex ">
-                        <span class="w-[16px] h-[16px] flex cursor-pointer" [matMenuTriggerFor]="menu">
+                        <span class="w-[16px] h-[16px] flex cursor-pointer" [matMenuTriggerFor]="menu" (click)="setClass()">
                             <img src="assets/svg-icons/nav-menu-icon.svg" />
                         </span>
                         <mat-menu class="bg-secondaryBg" #menu="matMenu" id="site">
@@ -55,7 +55,7 @@
                                         [ngClass]="!site?.notification?'text-[#453303] bg-yellow':'text-secondary-heiglight'">Off</button>
                                 </div>
                                 <div id="renameMenu">
-                                    <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" [matMenuTriggerFor]="rename" (click)="$event.stopPropagation();patchNameValue(site)">Rename</span>
+                                    <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" [matMenuTriggerFor]="rename" (click)="$event.stopPropagation();patchNameValue(site);setClass()">Rename</span>
                                     <mat-menu class="bg-primaryBg" #rename="matMenu" id="rename">
                                         <div class="p-[15px] flex flex-col gap-[15px]">
                                             <div class="flex flex-col gap-3" (click)="$event.stopPropagation()">
@@ -76,7 +76,7 @@
                                     </mat-menu>
                                 </div>
                                 <div>
-                                 <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" [matMenuTriggerFor]="delete" (click)="$event.stopPropagation()">Delete</span>
+                                 <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" [matMenuTriggerFor]="delete" (click)="$event.stopPropagation();setClass()">Delete</span>
                                  <mat-menu class="bg-primaryBg" #delete="matMenu" id="delete">
                                     <div class="p-[15px] flex flex-col gap-[15px]">
                                         
