Library filter fixes and group data update functionality fixes

--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -11,13 +11,13 @@
                 <img src="assets/svg-icons/search-icon.svg" class="w-[14px] h-[14px]" />
             </span>
         </div>
-        <div class="flex items-center">
+        <!-- <div class="flex items-center">
             <span class="px-[15px] py-[5px] bg-primaryBg cursor-pointer rounded-[50px] min-w-[44px] !h-[24px] flex justify-center items-center gap-[10px] self-stretch">
                 <img src="assets/svg-icons/filter-icon.svg" class="w-[14px] h-[14px]" />
             </span>
-        </div>
+        </div> -->
         
-        <span class="w-[16px] h-[14px] cursor-pointer" (click)="closeLibraryDrawer()">
+        <span class="w-[16px] !min-w-[16px] !min-h-[14px] h-[14px] cursor-pointer" (click)="closeLibraryDrawer()">
             <img src="assets/svg-icons/drawer-toggle-icon.svg" />
         </span>
     </div>
@@ -39,7 +39,7 @@
                 <span class="min-w-[102.324px]"></span>
                 <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span>
                 <span class="min-w-[127.933px]">{{group.surface_area.toFixed(3)}}km²</span>
-                <div class="flex gap-[15px] items-center">
+                <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
                     <span class="text-secondary-heiglight">{{group.total_objects}}</span>
                     <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setClass()" [matMenuTriggerFor]="menu">
                         <img src="assets/svg-icons/nav-menu-icon.svg" />
