--- a/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.scss
+++ b/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.scss
@@ -97,3 +97,24 @@
     width: 100%;
 }
 }
+
+::ng-deep .custom-preview{
+  .mat-mdc-dialog-surface {
+    border-radius: 10px !important;
+    background-color: #20272D !important;
+  }
+  .mat-mdc-dialog-container{
+    overflow: auto;
+    min-width: 600px !important;  /* Set minimum width */
+    min-height: 500px !important;  /* Set minimum height */
+    max-width: 100% !important;
+    max-height: 100% !important;
+  }
+}
+::ng-deep.custom-preview.mat-mdc-dialog-containe{
+  overflow: auto;
+  min-width: 500px;  /* Set minimum width */
+  min-height: 500px;  /* Set minimum height */
+  width: 880px;  /* Initial width */
+  height: 694px;  /* Initial height */
+}
