--- a/src/app/common/groups-list/groups-list.component.html
+++ b/src/app/common/groups-list/groups-list.component.html
@@ -18,7 +18,7 @@
             <span class="min-w-[102.324px]"></span>
             <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span>
             <span class="min-w-[127.933px]">{{group.surface_area.toFixed(3)}}km²</span>
-            <div class="flex gap-[15px] items-center">
+            <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
                 <span class="text-secondary-heiglight">{{group.total_objects}}</span>
                 <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setClass()" [matMenuTriggerFor]="menu">
                     <img src="assets/svg-icons/nav-menu-icon.svg" />
@@ -35,7 +35,7 @@
                                 class="text-xs leading-[18px] py-[9px] font-semibold my-[7px] mr-[7px] rounded-[19px] px-[20px] "
                                 [ngClass]="!group?.notification?'text-[#453303] bg-yellow':'text-secondary-heiglight'">Off</button>
                         </div>
-                        <span *ngIf="group.subgroups.length" class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="addGroup('addSubgroup',group)">Add subgroup</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="addGroup('addSubgroup',group)">Add subgroup</span>
                         <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="renameGroup('rename',group)">Rename</span>
                         <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="deleteGroup('delete',group)">Delete</span>
                     </div>
