--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
         <mat-drawer [ngClass]="OpenEventCalendar ? '!w-[1088px]':'!w-[820px]'"  #drawer class="!bg-primaryBg !top-[40px] !block !z-[999999999999] library" mode="side">
          @if (drawer._animationState === 'open') {
           <div class="z-[999999999999] h-full">
-          <app-sidebar-drawer (closeSidebar)="closeDrawer()" (notifyParent)="receiveData($event)" (rowHoveredData)="highLightShape($event)" [zoomed_wkt]="zoomed_wkt_polygon" [polygon_wkt]="polygon_wkt" [type]="type" [endDate]="endDate" [startDate]="startDate"></app-sidebar-drawer>
+          <app-sidebar-drawer (closeSidebar)="closeDrawer()" (notifyParent)="receiveData($event)"  (addMarkerToMap)="handleMakerData($event)" (rowHoveredData)="highLightShape($event)" [zoomed_wkt]="zoomed_wkt_polygon" [polygon_wkt]="polygon_wkt" [type]="type" [endDate]="endDate" [startDate]="startDate"></app-sidebar-drawer>
           </div>
          } 
         </mat-drawer>
