--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-end " [ngClass]="drawStatus === 'open'? 'gap-[10px]':'gap-[250px]'">
+<div class="flex justify-between items-end " [ngClass]="drawStatus === 'open'? 'gap-[10px]':'gap-[10px]'">
   <div class="w-fit flex h-[50px] bg-primaryBg rounded-[5px] shadow-custom-black">
     <div class="border-r border-custom-border px-[15px] w-[120px]">
 
@@ -34,12 +34,12 @@
     <div class="w-fit gap-[10px] items-center px-[10px] flex border-r border-custom-border h-full cursor-pointer" (click)="openDateDailog()">
       <div class="flex gap-[10px] min-w-[260px] text-secondaryText text-xs font-bold"  *ngIf="startDate && endDate">
         <div class="flex gap-[5px] items-center text-secondaryText text-xs font-bold">
-          <span>{{startDate | dateFormat}}</span>
+          <span>{{startDate }}</span>
           <span class="text-secondary-heiglight">{{startTime}}</span>
         </div>
         -
         <div class="flex gap-[5px] items-center text-secondaryText text-xs font-bold">
-          <span>{{endDate | dateFormat}}</span>
+          <span>{{endDate}}</span>
           <span class="text-secondary-heiglight">{{endTime}}</span>
         </div>
       </div>
@@ -93,16 +93,14 @@
       </div>
     </div>
   </div>
-  <div class="w-[545px] flex h-[35px] bg-primaryBg rounded-[5px] shadow-custom-black" (click)="closeDropdown()">
-    <div class=" px-[10px] w-[329px] gap-[10px] items-center flex border-r border-custom-border h-full">
-      <div class="flex gap-[10px] w-[300px] items-center">
-        <div class="flex gap-2 items-center w-[280px]">
-          <div class="flex gap-1 z-30 relative min-w-[138px] font-semibold text-xs leading-[14.4px]"><span
-              class="uppercase text-secondaryText">Latitude</span><span
-              class="text-secondary-heiglight">{{latitude}}</span></div>
-          <div class="flex gap-1 z-30 min-w-[138px] relative font-semibold text-xs leading-[14.4px]"><span
-              class="uppercase text-secondaryText">Longitude</span><span
-              class="text-secondary-heiglight">{{longitude}}</span></div>
+  <div class="w-[435px] flex h-[50px] bg-primaryBg rounded-[5px] shadow-custom-black" (click)="closeDropdown()">
+    <div class=" px-[10px] w-[200px] gap-[10px] items-center flex border-r border-custom-border h-full">
+      <div class="flex gap-[10px] w-[200px] items-center">
+        <div class="flex gap-2 items-center min-w-[190px]" (contextmenu)="onRightClick($event)">
+          <div class="flex gap-1 z-30 relative min-w-[61px] font-semibold text-xs leading-[14.4px]">
+            <span class="text-secondary-heiglight">{{latitude}}</span></div>
+          <div class="flex gap-1 z-30 min-w-[64px] relative font-semibold text-xs leading-[14.4px]">
+             <span class="text-secondary-heiglight">{{longitude}}</span></div>
           <span class="cursor-pointer" (click)="copyToClipboard()">
             <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -114,7 +112,7 @@
       </div>
       <div class="felx gap-1"></div>
     </div>
-    <div class="flex items-center justify-center border-r border-custom-border gap-[10px] w-[35px] h-[35px] cursor-pointer" (click)="zoomMap('zoomOut')">
+    <div class="flex items-center justify-center border-r border-custom-border gap-[10px] w-[35px] h-[50px] cursor-pointer" (click)="zoomMap('zoomOut')">
       <span>
         <svg width="13" height="3" viewBox="0 0 13 3" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M11.5 1.5H1.5" stroke="#4A5863" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -122,7 +120,7 @@
 
       </span>
     </div>
-    <div class="flex items-center justify-center px-[10px] gap-[10px] w-[120px] h-[35px] border-r border-custom-border">
+    <div class="flex items-center justify-center px-[10px] gap-[10px] w-[120px] h-[50px] border-r border-custom-border">
       <span class="text-secondary-heiglight ">
         {{zoomLevel}}
       </span>
@@ -130,7 +128,7 @@
         <input matSliderThumb [(ngModel)]="zoomLevel" (input)="zoomMap('')" #slider>
       </mat-slider>
     </div>
-    <div class="flex items-center justify-center gap-3 w-[35px] h-[35px] border-r border-custom-border cursor-pointer" (click)="zoomMap('zoomIn')">
+    <div class="flex items-center justify-center gap-3 w-[35px] h-[50px] border-r border-custom-border cursor-pointer" (click)="zoomMap('zoomIn')">
       <span>
         <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M11.5 6.5H1.5M6.5 1.5V11.5" stroke="#ABB7C0" stroke-width="2" stroke-linecap="round"
@@ -140,7 +138,7 @@
 
       </span>
     </div>
-    <div class="flex items-center justify-center gap-3 w-[35px] h-[35px]">
+    <div class="flex items-center justify-center gap-3 w-[35px] h-[50px]">
       <span>
         <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
