--- a/src/app/components/sidebar-drawer/sidebar-drawer.component.html
+++ b/src/app/components/sidebar-drawer/sidebar-drawer.component.html
@@ -2,9 +2,11 @@
     @if (type=='library') {  <div>
         <app-library [endDate]="endDate" (onFilterset)="onFiltersetData($event)" [shapeHoverData]="shapeHoverData"  [popUpData]="popUpData" [zoomed_wkt]="zoomed_wkt" [startDate]="startDate" (closeDrawer)="closeDrawer($event)" (rowHoveredData)="highlightData($event)" (notifyParent)="handleData($event)" (addMarkerToMap)="handelMarkerData($event)" [polygon_wkt]="polygon_wkt"></app-library>
     </div>
-} @else if(type === 'Sites'){
+} 
+<!-- @else if(type === 'Sites'){
     <app-sites (closeDrawer)="closeDrawer($event)"></app-sites>
-} @else if(type === 'Groups'){
+} -->
+ @else if(type === 'Groups'){
     <app-groups (closeDrawer)="closeDrawer($event)"></app-groups>
 }
 </div>
