--- a/src/app/dailogs/image-preview/image-preview.component.html
+++ b/src/app/dailogs/image-preview/image-preview.component.html
@@ -1,31 +1,37 @@
 @if (data.type === 'vendor') {
     <div class="dialog-content  bg-secondaryBg p-[15px]">
         <div class="flex flex-col">
+          <div class="relative 2k:!h-[900px] mac16:!h-[730px] mxl:!h-[545px] lxl:!h-[800px] w-full">
             <div
             #container
-            class="2k:!h-[700px] mxl:!h-[545px] lxl:!h-[600px] overflow-auto relative resizable-image bg-secondary-heiglight flex justify-center items-center"
+            class="2k:!h-[900px] mac16:!h-[730px] mxl:!h-[545px] lxl:!h-[800px] overflow-auto relative resizable-image bg-secondary-heiglight flex justify-center items-center"
           >
             @if (data?.images?.presigned_url) {
-              <img
-                [src]="data?.images?.presigned_url"
-                alt="Preview"
-                class="resizable-image object-contain w-full"
-                (click)="onClick($event)"
+              <div
+                class="image-container"
+                (wheel)="onWheel($event)"
                 (mousedown)="onMouseDown($event)"
-                (mousemove)="mouseMoveHandler($event)"
+                (mousemove)="onMouseMove($event)"
                 (mouseup)="onMouseUp()"
                 (mouseleave)="onMouseUp()"
-                #img
-                style="cursor: zoom-in; width: 100%; transition: all 0.3s; position: absolute;height: -webkit-fill-available ;"
-              />
+              >
+                <img
+                  #img
+                  [src]="data?.images?.presigned_url"
+                  alt="Preview"
+                  class="resizable-image object-contain"
+                  style="transition: transform 0.3s; cursor: pointer; position: relative;"
+                />
+              </div>
             } @else {
               <span class="text-lg leading-6 font-semibold text-secondary-heiglight">
                 Image not found
               </span>
             }
-          </div>      
+          </div>   
+          </div>   
             <div class="flex flex-col bg-primaryBg p-[15px] gap-[15px] items-end justify-between font-Barlow">
-              <div class="flex gap-[15px]">
+              <div class="flex gap-[15px] w-full justify-between">
                 <div class="flex flex-col gap-[10px] w-[170px] flex-0 items-start justify-center">
                   <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Date</span>
                   <div class="flex gap-[5px]">
@@ -65,10 +71,10 @@
                       <span class="text-secondaryText text-center text-sm font-medium leading-[18px]">{{getTimePeriod(data?.images?.acquisition_datetime)}}</span>
                     </div>
                 </div>
-                <div class="flex flex-col gap-[10px] w-[140px] flex-0 items-start justify-center">
+                <div class="flex flex-col gap-[10px] w-[140px] mac16:!w-[237px] flex-0 items-start justify-center">
                   <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">ID</span>
                     <div class="flex items-center gap-[15px] self-stretch w-full">
-                      <span class="text-secondaryText text-center text-sm font-medium leading-[18px] w-[140px]">{{data?.images?.vendor_id}}</span>
+                      <span class="text-secondaryText text-center text-sm font-medium leading-[18px] w-[140px] mac16:!w-[237px]">{{data?.images?.vendor_id}}</span>
                     </div>
                 </div>
               </div>
@@ -81,31 +87,40 @@
 }@else{
     <div class="dialog-content  bg-secondaryBg p-[15px]">
         <div class="flex flex-col">
+          <div class="relative 2k:!h-[900px] mac16:!h-[730px] mxl:!h-[545px] lxl:!h-[800px] w-full">
             <div
             #container
-            class="2k:!h-[700px] mxl:!h-[545px] lxl:!h-[600px] overflow-auto relative resizable-image bg-secondary-heiglight flex justify-center items-center"
+            class="2k:!h-[900px] mxl:!h-[545px] mac16:!h-[730px] lxl:!h-[800px] overflow-auto relative resizable-image bg-secondary-heiglight flex justify-center items-center"
           >
             @if (data.images.data[currentIndex].presigned_url) {
-              <img
-                [src]="data?.images?.data[currentIndex]?.presigned_url"
-                alt="Preview"
-                class="resizable-image object-contain w-full"
-                (click)="onClick($event)"
+             
+              <div
+                class="image-container"
+                (wheel)="onWheel($event)"
                 (mousedown)="onMouseDown($event)"
-                (mousemove)="mouseMoveHandler($event)"
+                (mousemove)="onMouseMove($event)"
                 (mouseup)="onMouseUp()"
                 (mouseleave)="onMouseUp()"
-                #img
-                style="cursor: zoom-in; width: 100%; transition: all 0.3s; position: absolute;height: -webkit-fill-available ;"
-              />
+              >
+                <img
+                  #img
+                  [src]="data?.images?.data[currentIndex]?.presigned_url"
+                  alt="Preview"
+                  class="resizable-image object-contain"
+                  style="transition: transform 0.3s; cursor: pointer; position: relative;"
+                />
+              </div>
+             
+
             } @else {
               <span class="text-lg leading-6 font-semibold text-secondary-heiglight">
                 Image not found
               </span>
             }
-          </div>      
+          </div>    
+        </div>  
           <div class="flex flex-col bg-primaryBg p-[15px] gap-[15px] items-end justify-between font-Barlow">              
-                <div class="flex gap-[15px]">
+                <div class="flex gap-[15px] w-full justify-between">
                   <div class="flex flex-col gap-[10px] w-[170px] flex-0 items-start justify-center">
                     <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Date</span>
                     <div class="flex gap-[5px]">
@@ -145,10 +160,10 @@
                         <span class="text-secondaryText text-center text-sm font-medium leading-[18px]">{{getTimePeriod(data?.images?.data[currentIndex]?.acquisition_datetime)}}</span>
                       </div>
                   </div>
-                  <div class="flex flex-col gap-[10px] w-[140px] flex-0 items-start justify-center">
+                  <div class="flex flex-col gap-[10px] w-[140px] mac16:!w-[237px] flex-0 items-start justify-center">
                     <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">ID</span>
                       <div class="flex items-center gap-[15px] self-stretch w-full">
-                        <span class="text-secondaryText text-center text-sm font-medium leading-[18px] w-[140px]">{{data?.images?.data[currentIndex]?.vendor_id}}</span>
+                        <span class="text-secondaryText text-center text-sm font-medium leading-[18px] w-[140px] mac16:!w-[237px]">{{data?.images?.data[currentIndex]?.vendor_id}}</span>
                       </div>
                   </div>
                 </div>
